--- a/styles/basic/text.scss
+++ b/styles/basic/text.scss
@@ -19,6 +19,10 @@
 .capitalize {
    text-transform: capitalize;
 }
+/* no underline */
+.no-under {
+   text-decoration: none;
+}
 
 /* text sizes */
 .text-xxs {
