--- a/styles/basic/inputs.scss
+++ b/styles/basic/inputs.scss
@@ -129,3 +129,15 @@
    text-align: center !important;
    font-size: larger !important;
 }
+#traits-inputs-void input {
+   border: 3px solid $void-ring !important;
+   border-radius: 100% !important;
+   background-color: white !important;
+   color: $void-ring !important;
+   outline: none !important;
+
+   width: 38px !important;
+   height: 38px !important;
+   text-align: center !important;
+   font-size: larger !important;
+}
