--- a/styles/basic/margin.scss
+++ b/styles/basic/margin.scss
@@ -1,7 +1,7 @@
 $margin-values: 0 5 10 15 20 25 30 35 40 45 50 55 60 65 80 100 120; // Ajoutez les valeurs de marges souhaitées ici
 
 .m0 {
-   margin: 0;
+   margin: 0px;
 }
 
 @mixin generate-margins {
