--- a/styles/basic/padding.scss
+++ b/styles/basic/padding.scss
@@ -2,34 +2,34 @@ $padding-values: 1 2 3 4 5 6 7 8 9 10;
 
 /* no padding */
 .p-0 {
-   padding: 0;
+   padding: 0px;
 }
 
 @mixin generate-padding {
    @for $i from 1 through length($padding-values) {
       $current-padding: nth($padding-values, $i);
       .pb-#{$current-padding} {
-         margin-bottom: #{$current-padding}rem;
+         padding-bottom: #{$current-padding}px;
       }
       .pt-#{$current-padding} {
-         margin-top: #{$current-padding}rem;
+         padding-top: #{$current-padding}px;
       }
       .pl-#{$current-padding} {
-         margin-left: #{$current-padding}rem;
+         padding-left: #{$current-padding}px;
       }
       .pr-#{$current-padding} {
-         margin-right: #{$current-padding}rem;
+         padding-right: #{$current-padding}px;
       }
       .py-#{$current-padding} {
-         margin-top: #{$current-padding}rem;
-         margin-bottom: #{$current-padding}rem;
+         padding-top: #{$current-padding}px;
+         padding-bottom: #{$current-padding}px;
       }
       .px-#{$current-padding} {
-         margin-left: #{$current-padding}rem;
-         margin-right: #{$current-padding}rem;
+         padding: #{$current-padding}px;
+         padding: #{$current-padding}px;
       }
       .p-#{$current-padding} {
-         margin: #{$current-padding}rem;
+         padding: #{$current-padding}px;
       }
    }
 }
