--- a/styles/basic/size.scss
+++ b/styles/basic/size.scss
@@ -4,3 +4,15 @@
 .w-80px {
    width: 80px;
 }
+.w-full {
+   width: 100%;
+}
+.w-150px {
+   width: 150px;
+}
+.w-135px {
+   width: 135px;
+}
+.w-140px {
+   width: 140px;
+}
