--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,6 +9,7 @@
 @import "basic/positions.scss";
 @import "basic/size.scss";
 @import "basic/tables.scss";
+@import "basic/images.scss";
 
 // @import "keyframes/keyframes.scss";
 // @import "keyframes/animations.scss";
