--- a/styles/variables/variables.scss
+++ b/styles/variables/variables.scss
@@ -6,3 +6,18 @@ $earth-ring: #699678;
 $fire-ring: #9b7350;
 $air-ring: #917896;
 $void-ring: #4b4641;
+
+/* clan colors */
+$crab: #292768;
+$crane: #68c2d4;
+$dragon: #55826e;
+$lion: #d9c23e;
+$phoenix: #ff8b01;
+$scorpion: #a33e3e;
+$unicorn: #742074;
+$imperial: #00a36c;
+$spider: #000000;
+$mantis: #3d9900;
+$minor: #b7b7b7;
+$ronin: #b7b7b7;
+$other: #b7b7b7;
