--- a/styles/basic/size.scss
+++ b/styles/basic/size.scss
@@ -1,3 +1,10 @@
+.w-20px {
+   width: 20px;
+}
+.w-60px {
+   width: 60px;
+}
+
 .w-64px {
    width: 64px;
 }
@@ -15,4 +22,12 @@
 }
 .w-140px {
    width: 140px;
+}
+
+.h-100px {
+   height: 100px;
+}
+
+.h-auto {
+   height: auto;
 }
