--- a/templates/actors/characters/character-sheet.hbs
+++ b/templates/actors/characters/character-sheet.hbs
@@ -1,7 +1,50 @@
 <form class="{{cssClass}}" autocomplete="off">
-   <header class="sheet-header">
-      <img src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="64" width="64" />
-      <h1><input name="name" type="text" value="{{actor.name}}" placeholder="Name" /></h1>
+   <header class="sheet-header flex flex-col ">
+      <div class="w-full flex justify-between"><img id="actor_img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="250" width="250" />
+         <div class="flex flex-col flex-1 ">
+            <div class="flex flex-col justify-between">
+            <h1>
+               <input class="{{data.clan}}-inputs" name="name" type="text" value="{{actor.name}}" placeholder="Name" />
+            </h1>
+               <div class="flex">
+                  <div class="flex flex-col">
+                     <label for="data.clans">Clan</label>
+                     <select class="{{data.clan}}-inputs" name="data.clan">
+                  {{#each data.clans as |id cat|}}
+                     <option value="{{id}}" {{#if (eq id ../data.clan)}}selected{{/if}}>{{localizeClan id}}</option>
+                  {{/each}}
+               </select>
+                  </div>
+                <div class="flex flex-col">
+                  <label for="test">school</label>
+                  <input class="{{data.clan}}-inputs" type="text" name="data.school" value="{{data.school}}">
+               </div>
+            </div>
+               
+            </div>
+         </div>
+         <div class="flex flex-col align-center w-80px justify-center">
+            <h1 class="flex flex-col ">
+               <label for="data.insight.rank">{{localize "l5r4ec.insight"}}</label>
+               <input  class="{{data.clan}}-inputs" id="insight_rank" type="number" name="data.insight.rank" id="insight" value="{{data.insight.rank}}">
+            </h1>
+            <div class="flex flex-col">
+                  <div class="flex flex-col">
+                     <label for="data.insight.points">{{localize "l5r4ec.reputation"}}</label>
+                     <input class="{{data.clan}}-inputs" type="number" name="data.insight.points" value="{{data.insight.points}}">
+                  </div>
+                  <div class="flex flex-col ">
+                     <label for="test">{{localize "l5r4ec.xp.available"}}</label>
+                     <input class="{{data.clan}}-inputs" type="number" name="data.xp" value="{{data.xp}}">
+                     </div>
+                  <div class="flex flex-col">
+                     <label for="test">{{localize "l5r4ec.xp.total"}}</label>
+                     <input class="{{data.clan}}-inputs" type="number" name="data.total_xp" value="{{data.total_xp}}">
+                  </div>
+               </div>   
+         </div>
+      </div>
+      
    </header>
    <!-- make a separator -->
    <div class="separator"></div>
@@ -30,6 +73,7 @@
                         value="{{data.traits.stamina}}"
                         data-type="Number"
                         min="0"
+                        max="99"
                         placeholder="0"
                      />
                   </div>
@@ -46,6 +90,7 @@
                         value="{{data.traits.willpower}}"
                         data-type="Number"
                         min="0"
+                        max="99"
                         placeholder="0"
                      />
                   </div>
@@ -73,6 +118,7 @@
             value="{{data.traits.strength}}"
             data-type="Number"
             min="0"
+            max="99"
             placeholder="0"
          />
       </div>
@@ -88,6 +134,7 @@
             value="{{data.traits.perception}}"
             data-type="Number"
             min="0"
+            max="99"
             placeholder="0"
          />
       </div>
@@ -96,53 +143,7 @@
 
 
 
-
-
-
-        <!-- <table id="water-stats-table">
-            <tr>
-               <th class="rings-traits"><h2 class="text-water rings-traits no-borders m0">{{localize "l5r4ec.rings.water"}}</h2></th>
-               <th><img
-                     src="/systems/l5r4ec/assets/icons/rings/water.svg"
-                     alt="le symbole de l'anneau de l'eau"
-                     height="32"
-                     width="32"
-                     class="no-borders"
-                  /></th>
-            </tr>
-            <tr>
-               <td>
-                  {{localize "l5r4ec.traits.strength"}}
-               </td>
-               <td><div id="traits-inputs-water">
-                     <input
-                        type="number"
-                        name="data.traits.strength"
-                        value="{{data.traits.strength}}"
-                        data-type="Number"
-                        min="0"
-                        placeholder="0"
-                     />
-                  </div>
-               </td>
-            </tr>
-            <tr>
-               <td>
-                  {{localize "l5r4ec.traits.perception"}}
-               </td>
-               <td><div id="traits-inputs-water">
-                     <input
-                        type="number"
-                        name="data.traits.perception"
-                        value="{{data.traits.perception}}"
-                        data-type="Number"
-                        min="0"
-                        placeholder="0"
-                     />
-                  </div>
-               </td>
-            </tr>
-         </table>
+<!--
          <table id="void-stats-table">
             <tr>
                <th class="rings-traits"><h2 class="text-void rings-traits no-borders m0">{{localize "l5r4ec.rings.void"}}</h2></th>
@@ -186,11 +187,12 @@
                      width="128"
                      class="no-borders"
                   />
-                  <p class="text-earth top-50 absolute right-150 w-64px text-center">{{localize "l5r4ec.rings.earth"}}</p>
+                 <!-- <p class="text-earth top-50 absolute right-150 w-64px text-center">{{localize "l5r4ec.rings.earth"}}</p> -->
+                  <button class="roll-dice  text-earth top-50 absolute right-150 w-64px text-center" data-name="earth" data-value="{{data.rings.earth}}" data-roll-type="ring">{{localize "l5r4ec.rings.earth"}}</button>
                   <img
                      src="/systems/l5r4ec/assets/icons/rings/kanji_earth.svg"
                      alt=""
-                     class="text-earth absolute right-150 no-borders"
+                     class="text-earth absolute right-150 top-0 no-borders"
                      height="64"
                      width="64"
                   />
@@ -200,6 +202,7 @@
                         value="{{data.rings.earth}}"
                         data-type="Number"
                         min="0"
+                        max="99"
                         placeholder="0"
                      /></div></div>
                <div id="air-ring-section" class="relative"><img
@@ -208,11 +211,13 @@
                      height="128"
                      width="128"
                      class="no-borders"
-                  /><p class="text-air absolute top-50 left-150 w-64px text-center">{{localize "l5r4ec.rings.air"}}</p>
+                  />
+                  <button class="roll-dice  text-air absolute top-50 left-150 w-64px text-center" data-name="air" data-value="{{data.rings.air}}" data-roll-type="ring">{{localize "l5r4ec.rings.air"}}</button>
+                <!--  <p class="text-air absolute top-50 left-150 w-64px text-center">{{localize "l5r4ec.rings.air"}}</p> -->
                   <img
                      src="/systems/l5r4ec/assets/icons/rings/kanji_air.svg"
                      alt=""
-                     class="text-earth absolute left-150 no-borders"
+                     class="text-air absolute left-150 top-0 no-borders"
                      height="64"
                      width="64"
                   />
@@ -233,7 +238,9 @@
                      height="128"
                      width="128"
                      class="no-borders"
-                  /><p class="text-water absolute top-140 w-64px text-center right-130">{{localize "l5r4ec.rings.water"}}</p>
+                  />
+                   <button class="roll-dice  text-water absolute top-140 w-64px text-center right-130" data-name="water" data-value="{{data.rings.water}}" data-roll-type="ring">{{localize "l5r4ec.rings.water"}}</button>
+                  <!-- <p class="text-water absolute top-140 w-64px text-center right-130">{{localize "l5r4ec.rings.water"}}</p> -->
                   <img
                      src="/systems/l5r4ec/assets/icons/rings/kanji_water.svg"
                      alt=""
@@ -248,6 +255,7 @@
                         value="{{data.rings.water}}"
                         data-type="Number"
                         min="0"
+                        max="99"
                         placeholder="0"
                      /></div>
 
@@ -258,7 +266,9 @@
                      height="128"
                      width="128"
                      class="no-borders"
-                  /><p class="text-fire absolute top-140 w-64px text-center left-130">{{localize "l5r4ec.rings.fire"}}</p>
+                  />
+                  <button class="roll-dice  text-fire absolute top-140 w-64px text-center left-130" data-name="fire" data-value="{{data.rings.fire}}" data-roll-type="ring">{{localize "l5r4ec.rings.fire"}}</button>
+           <!--       <p class="text-fire absolute top-140 w-64px text-center left-130">{{localize "l5r4ec.rings.fire"}}</p> -->
                   <img
                      src="/systems/l5r4ec/assets/icons/rings/kanji_fire.svg"
                      alt=""
@@ -272,6 +282,7 @@
                         value="{{data.rings.fire}}"
                         data-type="Number"
                         min="0"
+                        max="99"
                         placeholder="0"
                      /></div>
                </div>
@@ -286,12 +297,13 @@
                      width="128"
                      class="no-borders"
                   />
-                  <p class="text-void text-center absolute left-24 top-190 w-80px">{{localize "l5r4ec.rings.void"}}</p>
+                  <button class="roll-dice  text-void text-center absolute left-24 top-190 w-80px" data-name="void" data-value="{{data.rings.void}}" data-roll-type="ring">{{localize "l5r4ec.rings.void"}}</button>
+                 <!-- <p class="text-void text-center absolute left-24 top-190 w-80px">{{localize "l5r4ec.rings.void"}}</p> -->
                   <img
                      src="/systems/l5r4ec/assets/icons/rings/kanji_void.svg"
                      alt=""
                      class="text-earth absolute left-24 top-125 no-borders"
-                     height="80"
+                     height="80"void
                      width="80"
                   />
                   <div id="ring-inputs-void">
@@ -301,6 +313,7 @@
                         value="{{data.rings.void}}"
                         data-type="Number"
                         min="0"
+                        max="99"
                         placeholder="0"
                      /></div>
                </div>
@@ -328,6 +341,7 @@
                         value="{{data.traits.reflexes}}"
                         data-type="Number"
                         min="0"
+                        max="99"
                         placeholder="0"
                      />
                   </div>
@@ -342,6 +356,7 @@
                         value="{{data.traits.awareness}}"
                         data-type="Number"
                         min="0"
+                        max="99"
                         placeholder="0"
                      />
                   </div>
@@ -371,6 +386,7 @@
                         value="{{data.traits.agility}}"
                         data-type="Number"
                         min="0"
+                        max="99"
                         placeholder="0"
                      />
                </div>
@@ -386,6 +402,7 @@
                         value="{{data.traits.intelligence}}"
                         data-type="Number"
                         min="0"
+                        max="99"
                         placeholder="0"
                      />
                   </div>
@@ -396,9 +413,20 @@
          </div>
       </div>
    </div>
+<div class="separator"></div>
+
+
+
+
+
+
+
+
+
+   <!--
    <div>
       <table>
-         <!-- make a skill table -->
+         
          <tr>
          <th>
             Skills :
@@ -437,7 +465,7 @@
             Items :
          </th>
 
-         <!-- for each item -->
+        
          {{#each items as |item|}}
             <tr>
                <td>
@@ -463,7 +491,7 @@
                </td>
             </tr>
          {{/each}}
-      </table>
+      </table> 
    </div>
-
+-->
 </form>
